# mp

./: '  .env  .gitignore  Cargo.toml  README.md  db.sql  musicdb.db  protocol.md  run.sh
migrations/2020-05-24-043522_init/: down.sql  up.sql
migrations/2020-06-11-074614_init/: down.sql  up.sql
mp-client/: Cargo.toml  exec.sh
mp-client/src/: cli.yaml
mp-client/src/client/: keymap.rs
mp-client/src/network/: mod.rs  protocol.rs
mp-client/src/ui/components/: status_bar.rs
mp-client/src/util/: mod.rs
mp-protocol/src/: lib.rs
mp-protocol/src/decoding/: binary_decoder.rs
mp-protocol/src/encoding/: binary_encoder.rs
mp-server/: Cargo.toml  exec.sh  musicdb.db
mp-server/src/: main.rs  mp_server.rs
mp-server/src/commands/: canonicalize.rs
mp-server/src/db/: mpdb.rs  track.rs
mp-server/src/dbus_interface/: mod.rs
mp-server/src/error/: mod.rs
mp-server/src/media/: error.rs  player.rs
mpclient/: Cargo.toml
mpclient/src/: main.rs
mpclient/src/ui/: render.rs
mpclient/src/ui/components/: sidebar.rs
mpclient/src/ui/handlers/: mod.rs
mpprotocol/src/: transmission.rs
mpprotocol/src/decoding/: decodable.rs  decode.rs  decoder.rs
mpprotocol/src/encoding/: encoder.rs
mpprotocol/src/request/: mod.rs
mpprotocol/src/response/: mod.rs
mpserver/: LICENSE  rustfmt.toml
mpserver/src/: file.rs  server.rs
mpserver/src/commands/: mod.rs
mpserver/src/db/: album.rs
mpserver/src/error/: mod.rs
mpserver/src/media/: event.rs  mpstate.rs
src/: '  .#mod.rs  .#server.rs  cli.rs  cli.yaml  client.rs  connection.rs  constants.rs  file.rs  files.rs  lib.rs  main.rs  mp_server.rs  mpserver.rs  opcode.rs  protocol.md  protocol.rs  request.rs  response.rs  schema.rs  server.rs  stuff.rs  transmission.rs
src/client/: client_state.rs  keymap.rs  mod.rs
src/cmd/: filter.rs  mod.rs
src/db/: album.rs  artist.rs  entry.rs  joined_track.rs  mod.rs  mpdb.rs  schema.rs  track.rs
src/decoding/: binary_decoder.rs  decodable.rs  decoder.rs  mod.rs
src/encoding/: binary_encoder.rs  encodable.rs  encode.rs  encoder.rs  mod.rs
src/error/: mod.rs
src/interface/: mod.rs
src/media/: error.rs  event.rs  media_events.rs  mod.rs  mpstate.rs  player.rs
src/network/: connection.rs  ioevent.rs  protocol.rs
src/protocol/: gen.rs
src/request/: mod.rs
src/response/: joined_track.rs  mod.rs  playback_state.rs
src/ui/: draw.rs  event.rs  key.rs  mod.rs  region.rs  render.rs  uistate.rs
src/ui/components/: command_bar.rs  content.rs  main.rs  mod.rs  playbar.rs  sidebar.rs  status_bar.rs
src/ui/handlers/: command.rs  mod.rs  tracklist.rs
src/util/: mod.rs
