[package]
name = "mp-protocol"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1"
num_enum = "0.5.0"
enum_derive = "0.1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.2.1"
