[package]
name = "mp-server"
version = "0.1.0"
authors = ["andyyu <andyyu2004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mp-protocol = { git = "ssh://git@gitlab.com/andyyu2004/mp-protocol.git" }
vlc-rs = "0.3.0"
mp-protocol = { path = "../mp-protocol" }
diesel = { version = "1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
taglib = "1"
tokio = { version = "0.2", features = ["full", "uds"] }
id3 = "0.5.1"
