[package]
name = "mp-client"
version = "0.1.0"
authors = ["Andy Yu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
# mp-protocol = { git = "ssh://git@gitlab.com/andyyu2004/mp-protocol.git" }
mp-protocol = { path = "../mp-protocol" }
clap = {version = "3.0.0-beta.1", features = ["yaml"]}
tokio = { version = "0.2", features = ["full"] }
fuzzy-matcher = "*"
tui = { version = "0.9", default-features = false, features = ["crossterm"] }
log = "0.4.8"
lazy_static = "1.4.0"
maplit = "1"
crossterm = "0.17"
futures = "0.3.5"
serde_json = "1"
simple-logging = "2.0.2"
