[package]
name = "mp-server"
version = "0.1.0"
authors = ["andyyu <andyyu2004@gmail.com>"]
edition = "2018"

[dependencies]
mp-protocol = { path = "../mp-protocol" }
anyhow = "1"
ignore = "0.4.17"
zbus = "2.0.0-beta.3"
vlc-rs = "0.3.0"
glib = "0.7"
mpris-player = "0.3.0"
futures = "0.3.5"
lazy_static = "1.4.0"
maplit = "1"
rayon = "1.1"
diesel = { version = "1", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "0.2", features = ["full", "uds"] }
serde_json = "1.0"
dotenv = "0.15.0"
taglib = "1"
id3 = "0.5.1"
rand = "0.7.3"
dirs = "3.0.1"
